--- a/css/themes/_light.scss
+++ b/css/themes/_light.scss
@@ -40,7 +40,7 @@ $overlayButtonBg: #0074E0;
 /**
 * Color variables
 **/
-$defaultBackground: #474747;
+$defaultBackground: #00bbf1;
 $filmstripOnlyOverlayBg: #000;
 $reloadProgressBarBg: #0074E0;
 
