Initial style updates

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,9 @@
 @import "themes/light";
 
+
+$blue: #26a5e4;
+
+
 /**
  * Style variables
  */
@@ -100,7 +104,7 @@ $sidebarWidth: 375px;
  /**
  * Misc.
  */
-$borderRadius: 4px;
+$borderRadius: 8px;
 $popoverMenuPadding: 13px;
 $happySoftwareBackground: transparent;
 $desktopAppDragBarHeight: 25px;
