--- a/css/filmstrip/_small_video.scss
+++ b/css/filmstrip/_small_video.scss
@@ -28,10 +28,11 @@
      */
     &:hover:not(.videoContainerFocused):not(.active-speaker) {
         cursor: hand;
-        border: $thumbnailVideoBorder solid $videoThumbnailHovered;
-        box-shadow: inset 0 0 3px $videoThumbnailHovered,
-        0 0 3px $videoThumbnailHovered;
-
+        border: none;// $thumbnailVideoBorder solid $videoThumbnailHovered;
+        // box-shadow: inset 0 0 3px $videoThumbnailHovered,
+        // 0 0 3px $videoThumbnailHovered;
+        box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
+        transform: scale(1.2);
         .remotevideomenu > .icon-menu {
             display: inline-block;
         }
