--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -12,8 +12,14 @@
     left: 0px;
     right: 0px;
     overflow: hidden;
-    width: calc(100% - 470px);
+    width: calc(100% - 375px); 
     background: #FFF;
+    .current-video-quality {
+        display: none;
+    }
+    .no-video {
+        display: none;
+    }
 }
 
 #largeVideoBackgroundContainer,
@@ -173,7 +179,7 @@
     }
 
     &__hoverOverlay {
-        background: rgba(0,0,0,.6);
+        background: rgba(42, 77, 95, .6);
         border-radius: $borderRadius;
         position: absolute;
         top: 0px;
@@ -186,8 +192,8 @@
 
     &.shift-right {
         &#largeVideoContainer {
-            margin-left: $sidebarWidth;
-            width: calc(100% - #{$sidebarWidth});
+            // margin-left: $sidebarWidth;
+            // width: calc(100% - #{$sidebarWidth});
         }
     }
 }
@@ -223,9 +229,9 @@
     width: 97%;
     height: auto;
     position: absolute;
-    top: 25px;
+    top: 70px;
     bottom: 40px;
-    left: 0;
+    left: 18px;
     right: 0;
     margin: 0 auto;
     border-radius: 10px;
@@ -253,10 +259,11 @@
 .videocontainer>video,
 .videocontainer>object {
     position: absolute;
-    left: 0;
+    left: 0 !important;
+    right: 0 !important;
     top: 0;
     z-index: $zindex1;
-    width: 100%;
+    width: 100% !important;
     height: 100%;
 }
 
@@ -399,6 +406,7 @@
 
 .connection-indicator {
     background: $connectionIndicatorBg;
+    display: none;
 
     &.status-high {
         background: green;
