--- a/css/filmstrip/_small_video.scss
+++ b/css/filmstrip/_small_video.scss
@@ -5,9 +5,12 @@
     border: $thumbnailVideoBorder solid transparent;
     border-radius: $borderRadius;
     margin: 0 $thumbnailVideoMargin;
+    border: none;
 
     &.videoContainerFocused, &:hover {
         cursor: hand;
+        box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
+        transform: scale(1.08);
     }
 
     /**
@@ -15,8 +18,9 @@
      */
     &.videoContainerFocused {
         border: $thumbnailVideoBorder solid $videoThumbnailSelected;
-        box-shadow: inset 0 0 3px $videoThumbnailSelected,
-        0 0 3px $videoThumbnailSelected;
+        border: none;
+        // box-shadow: inset 0 0 3px $videoThumbnailSelected,
+        // 0 0 3px $videoThumbnailSelected;
     }
 
     .remotevideomenu > .icon-menu {
@@ -32,7 +36,7 @@
         // box-shadow: inset 0 0 3px $videoThumbnailHovered,
         // 0 0 3px $videoThumbnailHovered;
         box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
-        transform: scale(1.2);
+        transform: scale(1.08);
         .remotevideomenu > .icon-menu {
             display: inline-block;
         }
