--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -19,14 +19,14 @@
     }
 
     @extend %align-right;
-    align-items: flex-end;
+    // align-items: flex-end;
     bottom: 0;
     box-sizing: border-box;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row;
     height: 100%;
     width: 100%;
-    padding: ($desktopAppDragBarHeight - 5px) 15px 10px;
+    padding: ($desktopAppDragBarHeight - 5px) 0 10px 0;
     /**
      * fixed positioning is necessary for remote menus and tooltips to pop
      * out of the scrolling filmstrip. AtlasKit dialogs and tooltips use
@@ -39,9 +39,14 @@
     right: 0;
     z-index: $filmstripVideosZ;
     background: #FFF; 
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    display: block;
+    max-width: 375px;
 
     &.reduce-height {
-        height: calc(100% - #{$newToolbarSizeWithPadding});
+        // height: calc(100% - #{$newToolbarSizeWithPadding});
     }
 
     /**
@@ -69,6 +74,7 @@
             padding-left: 0;
             transition: right 2s;
             width: 100%;
+            position: static;
         }
     }
 
@@ -89,11 +95,17 @@
             .videocontainer {
                 height: 0px;
                 width: 100%;
-                border-radius: 25px;
                 box-sizing: border-box;
                 overflow: hidden;
-                background: #00bb;
-                margin: 0;
+                background: #177bad;
+                margin: 0 auto;
+                box-sizing: border-box;
+                transition: .2s ease-in-out;
+                border: none;
+                height: 200px;
+                padding-top: 0 !important;
+                box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
+                display: block;
     }
         }
 
@@ -105,7 +117,17 @@
      */
     #filmstripLocalVideo,
     #filmstripRemoteVideos {
-        padding: 10px;
+        padding: 8px 0;
+        padding-left: 25px;
+        padding-right: 30px;
+        &#filmstripLocalVideo {
+            position: absolute;
+            left: -355px;
+            right: initial;
+            width: 300px;
+            bottom: 50px;
+            z-index: 200;
+        }
     }
 
     #filmstripRemoteVideos {
@@ -115,8 +137,10 @@
         flex: 1;
         flex-direction: column-reverse;
         height: auto;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-x: visible;
+        overflow-y: overlay;
+        padding-top: 30px;
+        position: relative;
 
         #filmstripRemoteVideosContainer {
             @include minHWAutoFix();
@@ -124,21 +148,22 @@
             overflow: visible;
             width: 100%;
             position: relative;
+            flex-basis: 100%;
+            flex-wrap: wrap;
 
             .videocontainer {
                 height: 0px;
                 width: 100%;
-                border-radius: 25px;
                 box-sizing: border-box;
                 transition: .2s ease-in-out;
-                // box-shadow: 0 0 15px rgba(22, 43, 53, 0);
                 border: none;
-                flex-basis: 50%;
+                flex-basis: 100%;
                 flex-grow: 1;
-                max-width: 270px;
-                height: 200px;
+                height: 170px;
                 padding-top: 0 !important;
                 box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
+                display: block;
+                margin: 0 0 20px;
                 // overflow: hidden;
 
             }
@@ -155,6 +180,7 @@
     .remote-videos-container {
         display: flex;
         transition: opacity 1s;
+        
     }
 
     .hide-scrollbar#filmstripRemoteVideos {
