--- a/css/filmstrip/_vertical_filmstrip_overrides.scss
+++ b/css/filmstrip/_vertical_filmstrip_overrides.scss
@@ -3,7 +3,38 @@
  * of the screen.
  */
 .vertical-filmstrip .filmstrip__toolbar {
-    transform: rotate(-90deg);
+    flex-basis: 100%;
+    height: 50px;
+    background: #FFF;
+    width: 95%;
+    margin: 0 auto 0 5px;
+    top: 0;
+    color: #00bbf1;
+    flex-direction: row;
+    align-items: center;
+    @include font-smoothing();
+    button, .jitsi-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #777;
+        font-weight: 600;
+        &.jitsi-icon {
+            margin-right: 5px;
+        }
+        svg {
+            fill: #777;
+            margin-right: 8px;
+
+        }
+        &.active {
+            color: #00bbf1;
+            svg {
+                fill: #00bbf1;
+            }
+        }
+
+    }
 }
 
 /**
@@ -29,7 +60,8 @@
          * are actually part of the toolbar instead of positioning being faked.
          */
         pointer-events: none;
-        text-align: right;
+        text-align: left;
+        bottom: 30px;
 
         > div {
             pointer-events: none;
@@ -42,6 +74,13 @@
 
         .toolbar-icon {
             pointer-events: all;
+            width: 100%;
+            height: 100%;
+            background: #FFF;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
         }
     }
 
@@ -62,6 +101,23 @@
 
     .indicator-container {
         float: none;
+        width: 40px;
+        height: 40px;
+        margin: 0 4px;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 2px solid rgba(210, 210, 210, .7);
+        padding: 2px; 
+        &.connection-indicator, &.show-connection-indicator {
+            display: none;
+        }
+        .jitsi-icon {
+            svg {
+                fill: #676767;
+                height: 30px;
+                width: 30px;
+            }
+        }
     }
 
     /**
@@ -74,6 +130,8 @@
         left: 0;
         top: auto;
         right: auto;
+        display: none;
+
     }
 
     .remote-video-menu-trigger {
