--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -80,9 +80,9 @@
 
         .button-group-center {
             justify-content: flex-start;
-            width: 100%;
-            height: 100px;
-            margin: 0 30px;
+            width: 400px;
+            height: 65px;
+            margin: 0 30px 30px;
 
             .toolbox-button {
                 > div {
@@ -134,7 +134,7 @@
                     }
                 }
 
-                &:nth-child(2) {
+                &:first-child {
                     .toolbox-icon {
                         background-color: $hangupColor;
                         border: 1px solid $hangupColor;
@@ -151,7 +151,25 @@
                     }
                 }
             }
+            .audio-preview, .video-preview {
+                .toolbox-button {
+                    .toolbox-icon {
+                        background: #FFF;
+                        border: 1px solid #d1dbe8;
+                        svg {
+                            fill: #5e6d7a;
+                        }
+                        &:hover {
+                            background-color: #daebfa;
+                            border: 1px solid #daebfa;
+                        }
+
+                    }
+                }
+            }
+
         }
+
 
         .button-group-right {
             justify-content: flex-end;
