--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -9,6 +9,29 @@
     .active-speaker {
         box-shadow: 0 0 5px 3px $videoThumbnailSelected
     }
+    #videospace {
+        width: 100%;
+        #largeVideoContainer {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: 0;
+            background: #FFF!important;
+        }
+    }
+    .new-toolbox {
+        .toolbox-content {
+            .button-group-center {
+                background: $belougaBlue;
+                padding: 16px 40px 5px 30px;
+                width: fit-content;
+                box-shadow: 0 0 10px rgba(0, 0, 0, .38);
+                border-radius: 4px;
+            }
+        }
+    }
+
 
     #filmstripRemoteVideos {
         align-items: center;
@@ -18,6 +41,9 @@
         height: calc(100vh - 200px);
         width: 100vw;
         margin: 100px 0px;
+        .videocontainer__background {
+            background: $belougaBlue;
+        }
     }
 
     .filmstrip__videos .videocontainer {
