--- a/css/filmstrip/_small_video.scss
+++ b/css/filmstrip/_small_video.scss
@@ -6,11 +6,13 @@
     border-radius: $borderRadius;
     margin: 0 $thumbnailVideoMargin;
     border: none;
+    transition: transform .2s;
 
     &.videoContainerFocused, &:hover {
         cursor: hand;
         box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
-        transform: scale(1.08);
+        // transform: scale(1.08);
+        z-index: 15;
     }
 
     /**
@@ -19,6 +21,7 @@
     &.videoContainerFocused {
         border: $thumbnailVideoBorder solid $videoThumbnailSelected;
         border: none;
+        transform: none;
         // box-shadow: inset 0 0 3px $videoThumbnailSelected,
         // 0 0 3px $videoThumbnailSelected;
     }
