--- a/css/filmstrip/_tile_view.scss
+++ b/css/filmstrip/_tile_view.scss
@@ -75,7 +75,7 @@
         z-index: $filmstripVideosZ;
 
         &.shift-right {
-            margin-left: $sidebarWidth;
+            // margin-left: $sidebarWidth;
             width: calc(100% - #{$sidebarWidth});
 
             #filmstripRemoteVideos {
