--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -39,6 +39,7 @@
     right: 0;
     z-index: $filmstripVideosZ;
     background: #FFF; 
+    background: #f5f5f5;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
@@ -127,6 +128,15 @@
             width: 300px;
             bottom: 50px;
             z-index: 200;
+
+            // Responsive style
+            //left: -295px;
+            // right: initial;
+            // width: 250px;
+            // top: 80px;
+            // z-index: 200;
+            // bottom: initial;
+
         }
     }
 
