--- a/css/filmstrip/_vertical_filmstrip_overrides.scss
+++ b/css/filmstrip/_vertical_filmstrip_overrides.scss
@@ -76,7 +76,7 @@
             pointer-events: all;
             width: 100%;
             height: 100%;
-            background: #FFF;
+            background: rgba(0, 0, 0, .2);
             display: inline-flex;
             align-items: center;
             justify-content: center;
@@ -106,14 +106,14 @@
         margin: 0 4px;
         border-radius: 50%;
         overflow: hidden;
-        border: 2px solid rgba(210, 210, 210, .7);
+        // border: 2px solid rgba(210, 210, 210, .7);
         padding: 2px; 
         &.connection-indicator, &.show-connection-indicator {
             display: none;
         }
         .jitsi-icon {
             svg {
-                fill: #676767;
+                fill: #FFF;
                 height: 30px;
                 width: 30px;
             }
