--- a/css/filmstrip/_small_video.scss
+++ b/css/filmstrip/_small_video.scss
@@ -38,8 +38,8 @@
         border: none;// $thumbnailVideoBorder solid $videoThumbnailHovered;
         // box-shadow: inset 0 0 3px $videoThumbnailHovered,
         // 0 0 3px $videoThumbnailHovered;
-        box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
-        transform: scale(1.08);
+        // box-shadow: 0 0 15px rgba(22,43,53,.4) !important;
+        // transform: scale(1.08);
         .remotevideomenu > .icon-menu {
             display: inline-block;
         }
